--- a/Client/blog/login/templates/login.html
+++ b/Client/blog/login/templates/login.html
@@ -5,13 +5,13 @@
     <input
       type="username"
       class="form-control"
-      id="exampleInputEmail1"
+      id="usernameInput"
       aria-describedby="emailHelp"
     />
   </div>
   <div class="mb-3">
     <label for="exampleInputPassword1" class="form-label">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" />
+    <input type="password" class="form-control" id="passwordInput" />
   </div>
   <button type="submit" id="submitButton" class="btn btn-primary">Submit</button>
 </form>
@@ -21,8 +21,8 @@
     submitButton.addEventListener("click", function (event) {
       event.preventDefault(); // Prevent the default form submission behavior
 
-      const username = document.getElementById("exampleInputEmail1").value;
-      const password = document.getElementById("exampleInputPassword1").value;
+      const username = document.getElementById("usernameInput").value;
+      const password = document.getElementById("passwordInput").value;
 
       // Construct the URL without encoding
       const url = `?user=${username}&pass=${password}`;
