--- a/Client/blog/login/templates/index.html
+++ b/Client/blog/login/templates/index.html
@@ -2,9 +2,34 @@
 <script>
   // Get the text from the URL parameters
   const urlParams = new URLSearchParams(window.location.search);
-  const textFromInput = urlParams.get("user");
+  const user = urlParams.get("user");
+  const pass = urlParams.get("pass")
 
-  console.log(textFromInput);
+  function updateURL(type) {
+    // Get the current URL
+    const currentURL = window.location.href;
+
+    // Construct the new URL
+    
+    let str = currentURL.split('?')[0];
+    str = str.slice(0, -1)
+    const newURL = `${str}/?user=${user}&pass=${pass}&type=${type}`;
+
+    // Redirect to the new URL
+    window.location.href = newURL;
+  }
+  function resterUrl(){
+    const currentURL = window.location.href;
+
+    // Construct the new URL
+    
+    let str = currentURL.split('?')[0];
+    str = str.slice(0, -1)
+    const newURL = `${str}/?user=${user}&pass=${pass}`;
+
+    // Redirect to the new URL
+    window.location.href = newURL;
+  }
 </script>
 
 <div class="container text-center">
@@ -21,28 +46,35 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row" style="margin-top: 3cap;">
   <div class="col-4">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-6">Tags:</div>
+        <div class="col-6"><button type="button" class="btn-close" aria-label="Close" onclick="resterUrl()"></button></div>
+      </div>
     <div id="list-tab" style = "max-height: 100px; overflow-y: scroll; border: solid; border-width:0.2cap;">
       {% for topic_type in topic_types %}
       <a
         class="list-group-item list-group-item-action"
         id="{{ topic_type.name }}"
-        href="?topic_type={{topic_type.id}}"
+        
+        onclick="updateURL({{topic_type.id}})"
       >
         {{ topic_type.name }}
       </a>
       {% endfor %}
     </div>
+    </div>
   </div>
   <div class="col-8">
-    <div id="nav-tabContent"style = "max-height: 600px; overflow-y: scroll; border: solid; border-width:0.2cap;">
+    <div id="nav-tabContent" style="max-height: 600px; margin-right: 2cap; overflow-y: scroll; border: solid; border-width:0.2cap;">
       {% for topic in topics %}
-      <div class="card-body">
+      <div class="card-body container-sm" style = "border: solid;width: auto ; border-width:0.1cap; margin: 0.4cap; padding: 0.5cap;">
         <h5 class="card-title">{{topic.name}}</h5>
         <small class="right">3 days ago</small>
         <p class="card-text">{{topic.description}}</p>
-        <a href="#" class="btn btn-primary">Button</a>
+        <a href="#" class="btn btn-outline-primary">Open</a>
         
       </div>
       {% endfor %}
