--- a/Client/blog/login/templates/index.html
+++ b/Client/blog/login/templates/index.html
@@ -3,7 +3,7 @@
   // Get the text from the URL parameters
   const urlParams = new URLSearchParams(window.location.search);
   const user = urlParams.get("user");
-  const pass = urlParams.get("pass")
+  const pass = urlParams.get("pass");
 
   function updateURL(type) {
     // Get the current URL
