--- a/Client/blog/login/templates/topic.html
+++ b/Client/blog/login/templates/topic.html
@@ -1,65 +1,173 @@
 {% extends "base.html" %} {% block content %}
 
 <div class="container">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            
-            <a class="navbar-brand">{{topic.name}}</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page">{{topic.type_id}}</a>
-                  </li>
-                </ul>
-                  <button class="btn btn-outline-success" type="submit">Favorite</button>
-            </div>
-        </div>
-    </nav>
-    <!--See description-->
-    <div class="col-11">
-        <div class="form-floating">
-            <textarea class="form-control disabled" placeholder="description" id="floatingTextarea2" style="height: auto; resize: none;" readonly>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand">{{topic.name}}</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page">{{topic.type_id}}</a>
+          </li>
+        </ul>
+        <button class="btn btn-outline-success" type="submit">Favorite</button>
+      </div>
+    </div>
+  </nav>
+  <!--See description-->
+  <div class="col-11">
+    <div class="form-floating">
+      <textarea
+        class="form-control disabled"
+        placeholder="description"
+        id="floatingTextarea2"
+        style="height: auto; resize: none"
+        readonly
+      >
                 {{topic.description}}
-            </textarea>
-            
-          </div>
+            </textarea
+      >
     </div>
-    <!-- See comments -->
-    <div class="col-12">
-        <div id="nav-tabContent" style="max-height: 600px; margin-right: 2cap; overflow-y: scroll;overflow-x: auto; border: solid; border-width:0.2cap;">
-            {%for comment in comments%}
-            <div class="card-body container-sm" style = "border: solid;width: auto ; border-width:0.1cap; margin: 0.4cap; padding: 0.5cap;">
-              <div class="row col-11">
-                <div class="col-10" style="display: flex;
-                flex-direction: row; align-items: center;"><h5 class="card-title">{{comment.user_id}}</h5></div>
-                <div class="col-2">
-
-                        <small class="right">{{comment.timestamp}}</small>
-
-                    
-                </div>
-              </div>   
-              <div class = "col-8">
-                <p class="card-text">{{comment.body}}</p>
-              </div>
-              
-            </div>
-            {% endfor %}
-            
+  </div>
+  <!-- See comments -->
+  <div class="col-12">
+    <div
+      id="nav-tabContent"
+      style="
+        max-height: 40cap;
+        margin-right: 2cap;
+        overflow-y: scroll;
+        overflow-x: auto;
+        border: solid;
+        border-width: 0.2cap;
+      "
+    >
+      {%for comment in comments%}
+      <div
+        class="card-body container-sm"
+        style="
+          border: solid;
+          width: auto;
+          border-width: 0.1cap;
+          margin: 0.4cap;
+          padding: 0.5cap;
+        "
+      >
+        <div class="row col-11">
+          <div
+            class="col-10"
+            style="display: flex; flex-direction: row; align-items: center"
+          >
+            <h5 class="card-title">{{comment.user_id}}</h5>
           </div>
+          <div class="col-2">
+            <small class="right">{{comment.timestamp}}</small>
+          </div>
+        </div>
+        <div class="col-8">
+          <p class="card-text">{{comment.body}}</p>
+        </div>
+      </div>
+      {% endfor %}
     </div>
-    <!-- write comment -->
+  </div>
+  <!-- write comment -->
+
+  <form method="post" , id="comment-form">
+    {% csrf_token %}
     <div class="col-11">
-        <div class="form-floating">
-            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 50px; resize: none;" ></textarea>
-            <label for="floatingTextarea2">Write Comment</label>
-          </div>
+      <div class="form-floating">
+        <textarea
+          class="form-control"
+          placeholder="Leave a comment here"
+          id="floatingTextarea2"
+          style="height: 50px; resize: none"
+        ></textarea>
+        <label for="floatingTextarea2">Write Comment</label>
+      </div>
     </div>
+    <div>
+      <button type="submit" id="post-btn">Post</button>
+    </div>
+  </form>
 </div>
+<script>
+  const myUserId = {{user_id}}; // Store the user ID in a JavaScript variable
+  console.log(`User ID: ${myUserId}`);
+    // Function to handle form submission
+  function formatDateToISO() {
+    const currentDate = new Date();
+    const year = currentDate.getFullYear();
+    const month = (currentDate.getMonth() + 1).toString().padStart(2, '0');
+    const day = currentDate.getDate().toString().padStart(2, '0');
+    const hours = currentDate.getHours().toString().padStart(2, '0');
+    const minutes = currentDate.getMinutes().toString().padStart(2, '0');
+    return `${year}-${month}-${day}T${hours}:${minutes}:00Z`;
+  }
 
+  
 
+  function PostForm() {
+    const commentText = document.getElementById("floatingTextarea2").value;
+    const jsonData = {
+      body: commentText,
+      timestamp: formatDateToISO(),
+      topic_id: {{topic.id}},
+      user_id: myUserId,
+    };
+    const csrftoken = getCookie('csrftoken');
+    // Send the JSON data to the specified URL
+    fetch("http://127.0.0.1:8000/comment/", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json",
+        'X-CSRFToken': csrftoken
+      },
+      body: JSON.stringify(jsonData),
+    })
+      .then((response) => {
+        if (response.ok) {
+          console.log("Comment posted successfully!");
+        } else {
+          console.error("Error posting comment:", response.statusText);
+        }
+      })
+      .catch((error) => {
+        console.error("An error occurred:", error);
+      });
+    }
+    function getCookie(name) {
+      let cookieValue = null;
+      if (document.cookie && document.cookie !== '') {
+          const cookies = document.cookie.split(';');
+          for (let i = 0; i < cookies.length; i++) {
+              const cookie = cookies[i].trim();
+              if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                  cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                  break;
+              }
+          }
+      }
+      return cookieValue;
+  }
+    // Prevent the default form submission behavior
+    document
+      .getElementById("comment-form")
+      .addEventListener("submit", function (event) {
+        event.preventDefault();
+        PostForm();
+      });
+</script>
 
 {% endblock %}
