--- a/Client/blog/login/templates/topic.html
+++ b/Client/blog/login/templates/topic.html
@@ -3,7 +3,7 @@
 <div class="container">
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand">{{topic.name}}</a>
+      <a class="navbar-brand" onclick="home()">{{topic.name}}</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -103,6 +103,16 @@
   </form>
 </div>
 <script>
+  function home(){
+    const urlParams = new URLSearchParams(window.location.search);
+    const user = urlParams.get("user");
+    const pass = urlParams.get("pass");
+    const baseUrl = window.location.origin;
+    const newURL = `${baseUrl}/?user=${user}&pass=${pass}`;
+
+    window.location.href = newURL;
+
+  }
   const myUserId = {{user_id}}; // Store the user ID in a JavaScript variable
   console.log(`User ID: ${myUserId}`);
     // Function to handle form submission
@@ -115,6 +125,7 @@
     const minutes = currentDate.getMinutes().toString().padStart(2, '0');
     return `${year}-${month}-${day}T${hours}:${minutes}:00Z`;
   }
+
 
   
 
